<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Encabezado de Registrar Usuario Nuevo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrar_usuario_nuevo"
                android:textSize="24sp"
                android:textColor="@color/editTextColorBlack"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center" />

            <!-- Campo de Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de Confirmar Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:textColor="@color/editTextColorBlack"
                android:textColorHint="@color/editTextColorBlack"
                app:boxStrokeColor="@color/editTextColorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón de Crear Cuenta -->
            <Button
                android:id="@+id/ljoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_createAccount"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
